[gd_scene load_steps=8 format=2]

[ext_resource path="res://2d/radial_quik_background.png" type="Texture" id=1]
[ext_resource path="res://uis/quick_slot/quick_slot.gd" type="Script" id=2]
[ext_resource path="res://2d/quick_slot_click_mask.png" type="BitMap" id=3]
[ext_resource path="res://2d/radial_quik_slot.png" type="Texture" id=4]
[ext_resource path="res://2d/icon/coin.png" type="Texture" id=5]
[ext_resource path="res://font/bakmulgwan__Light.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="quick_slot" type="TextureButton"]
modulate = Color( 1, 1, 1, 0.392157 )
self_modulate = Color( 1, 1, 1, 0.705882 )
margin_right = 117.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 60, 50 )
focus_mode = 0
mouse_filter = 1
texture_normal = ExtResource( 1 )
texture_click_mask = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="outline" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -37.8337
margin_right = 45.5
margin_bottom = 37.1663
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.6674
margin_top = -32.3337
margin_right = 31.3326
margin_bottom = 31.6663
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stack" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.6934
margin_top = -39.69
margin_right = -23.6934
margin_bottom = -20.69
custom_fonts/font = SubResource( 1 )
text = "n"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="mouse_exited"]
[connection signal="pressed" from="." to="." method="slot_pressed"]
[connection signal="visibility_changed" from="." to="." method="visibility_changed"]
